--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "kaleido-miner",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Miner-Cli for Kaleido Finance Testnet",
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "chalk": "^5.3.0",
-    "chalk-animation": "^2.0.3",
-    "ora": "^5.4.1"
+    "chalk-animation": "^2.1.0",
+    "ora": "^6.0.1"
   },
   "engines": {
     "node": ">=14.0.0"
